# lets-chat

./: .env  .gitignore  db.sqlite3  frontend-initialize.bat  live-server-initialize.sh  migrate.bat  pyproject.toml  run-uvicorn.bat  schema.yml
account/: admin.py  models.py  serializers.py  urls.py  views.py
account/migrations/: 0001_initial.py  0002_account_name_account_phone_alter_account_email.py
backend/: asgi.py  routing.py  settings.py  urls.py
chat_server/: admin.py  apps.py  models.py  schemas.py  serializers.py  signals.py  urls.py  views.py
chat_server/migrations/: 0001_initial.py  0002_alter_category_options.py  0003_alter_server_id.py  0004_category_icon.py  0005_channel_banner_channel_icon.py
chat_service/: apps.py
frontend/: package-lock.json  package.json
frontend/app/: page.tsx
